--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,35 @@
   <groupId>AmazonMobileApp</groupId>
   <artifactId>AmazonMobileApp</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	<build>
+		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.18.1</version>
+				<configuration>
+					<forkCount>0</forkCount>
+					<suiteXmlFiles>
+						<suiteXmlFile>testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<fork>true</fork>
+					<executable>C:\Program Files\Java\jdk1.8.0_144\bin\javac.exe</executable>
+				</configuration>
+			</plugin>
+		</plugins>
+		</build>
+			
       <dependencies>  
   <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
@@ -15,6 +44,14 @@
     <version>6.14.3</version>
     <scope>test</scope>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.uncommons/reportng -->
+<dependency>
+    <groupId>org.uncommons</groupId>
+    <artifactId>reportng</artifactId>
+    <version>1.1.4</version>
+    <scope>test</scope>
+</dependency>
+
 <dependency>
     <groupId>io.appium</groupId>
     <artifactId>java-client</artifactId>
